@@ -5,6 +5,8 @@
 * Add in key shortcut (alt-h) to toggle history window
 * Tidy up pod a little to highlight notes better
 * Check terminal_font config for quotes and remove
+* Enable use of "configure --sysconfdir=", defaults to /etc
+* Revise host checking algorithm to take ssh_config files into account
 
 2008-11-28 Duncan Ferguson <duncan_ferguson@user.sf.net> - v3.21-1
 
